# bastian-project

./: .gitignore  Dockerfile  README.md  add_spare_key.sh  bastion_wrapper.sh  docker-compose-with-prod.yml  docker-compose.yml  fetch-bastian-keys  sshd_config
bastion_api/: Cargo.toml  Dockerfile
bastion_api/src/: main.rs
bastion_cli/: Cargo.toml
bastion_cli/src/: cli.rs  handlers.rs  identity.rs  keys.rs  main.rs  permissions.rs  requests.rs  session.rs
db_scripts/: migration_ssh_keys.sql  schema_updates.sql  test_setup.sql  user_tracking_schema.sql
