[package]
name = "bastion_cli"
version = "0.1.0"
edition = "2021"

[dependencies]
chrono = "0.4.42"
clap = { version = "4.5.48", features = ["derive"] }
tokio = { version = "1", features = ["full"] } # sqlx is async
sqlx = { version = "0.7", features = [
    "runtime-tokio-rustls",
    "postgres",
    "chrono",
] }
shell-words = "1.1.0"
